--- a/project/pug/main/main.pug
+++ b/project/pug/main/main.pug
@@ -1,1 +1,11 @@
-main main
+main 
+  div(class="wrapper-form")
+    form(action="" class="form" id="form" )
+      input(type="text" class="input-text" placeholder="Ask" id="ask")
+      div(class="askError" id="askError")
+      textarea(rows="5" class="input-text" placeholder="Answer" id="answer") 
+      div(class="answerError" id="answerError")
+      button(class="") Send 
+
+  div(class="wrapper-main")
+    div(class="inner-main" id="inner-main") 
