--- a/project/pug/index.pug
+++ b/project/pug/index.pug
@@ -7,4 +7,5 @@ html(lang="en")
     include header/header.pug
     include main/main.pug
     include footer/footer.pug
+    script(src="js/script.js")
     script(src="http://localhost:35729/livereload.js")
