--- a/project/pug/header/header.pug
+++ b/project/pug/header/header.pug
@@ -1,1 +1,30 @@
-header header
+header 
+  nav(class="navbar navbar-expand-lg bg-light")
+    div(class="container-fluid")
+      a(class="navbar-brand" href="index.html") Pigeons
+      button(class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+        span(class="navbar-toggler-icon")
+
+      div(class="collapse navbar-collapse" id="navbarSupportedContent")
+        ul(class="navbar-nav me-auto mb-2 mb-lg-0")
+          li(class="nav-item")
+            a(class="nav-link active" aria-current="page" href="#") Home
+          li(class="nav-item")
+            a(class="nav-link" href="#") Link
+          li(class="nav-item dropdown")
+            a(class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Dropdown
+            ul(class="dropdown-menu")
+              li
+                a(class="dropdown-item" href="#") Action
+              li
+                a(class="dropdown-item" href="#") Another action
+              li
+                hr(class="dropdown-divider")
+              li
+                a( class="dropdown-item" href="#") Something else here
+          li( class="nav-item")
+            a( class="nav-link disabled") Disabled 
+
+        form(class="d-flex" role="search")
+          input(class="form-control me-2" type="search" placeholder="Search" aria-label="Search")
+          button(class="btn btn-outline-success" type="submit") Search 
