--- a/project/pug/main/main.pug
+++ b/project/pug/main/main.pug
@@ -1,23 +1,25 @@
 main 
-  div(class="wrapper-form")
-    form(action="" class="form" id="form" )
-      input(type="text" class="input-text" placeholder="Ask" id="ask")
-      div(class="askError" id="askError")
-      input(type="text" class="input-text" placeholder="Answer" id="answer") 
-      input(type="text" class="input-text" placeholder="Answer1" id="answer1") 
-      input(type="text" class="input-text" placeholder="Answer2" id="answer2") 
-      input(type="text" class="input-text" placeholder="Answer3" id="answer3") 
-      input(type="text" class="input-text" placeholder="Answer4" id="answer4") 
-      input(type="text" class="input-text" placeholder="Answer5" id="answer5") 
-      input(type="text" class="input-text" placeholder="Answer6" id="answer6") 
-      input(type="text" class="input-text" placeholder="Answer7" id="answer7") 
-      input(type="text" class="input-text" placeholder="Answer8" id="answer8") 
-      input(type="text" class="input-text" placeholder="Answer9" id="answer9") 
-      input(type="text" class="input-text" placeholder="Answer10" id="answer10") 
-      div(class="answerError" id="answerError")
-      button(class="") Send 
+  div(class="container")
+    div(class="wrapper-form")
+      form(action="" class="form" id="form" )
+        textarea(cols="30" rows="5" type="text" class="input-text" placeholder="Ask" id="ask")
+        div(class="askError" id="askError")
+        input(type="text" class="input-text" placeholder="Answer" id="answer") 
+        input(type="text" class="input-text" placeholder="Answer1" id="answer1") 
+        //- input(type="text" class="input-text" placeholder="Answer2" id="answer2") 
+        //- input(type="text" class="input-text" placeholder="Answer3" id="answer3") 
+        //- input(type="text" class="input-text" placeholder="Answer4" id="answer4") 
+        //- input(type="text" class="input-text" placeholder="Answer5" id="answer5") 
+        //- input(type="text" class="input-text" placeholder="Answer6" id="answer6") 
+        //- input(type="text" class="input-text" placeholder="Answer7" id="answer7") 
+        //- input(type="text" class="input-text" placeholder="Answer8" id="answer8") 
+        //- input(type="text" class="input-text" placeholder="Answer9" id="answer9") 
+        //- input(type="text" class="input-text" placeholder="Answer10" id="answer10") 
+        div(class="answerError" id="answerError")
+        button(class="btn btn-info send") Send 
 
-  div(class="wrapper-main")
-    div(class="inner-main" id="inner-main") 
+    div(class="wrapper-main ")
+      div(class="inner-main" id="inner-main") 
+
 
 
