--- a/project/css/scss/style.scss
+++ b/project/css/scss/style.scss
@@ -75,6 +75,7 @@ body {
   background-color: var(--body-bg);
   /* For Animation Dark Mode */
   transition: 0.4s;
+  direction: rtl;
 }
 body.dark {
 }
@@ -111,6 +112,16 @@ button {
   border-radius: var(--button-border-radius);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  &.send {
+    display: block !important;
+    width: 50%;
+    margin: 3rem auto;
+    padding: 1rem !important;
+    color: #fff !important;
+    font-size: 2rem !important;
+    font-weight: bold !important;
+    background-color: #0d6efd;
+  }
   &:not(:disabled) {
     cursor: pointer;
   }
@@ -147,5 +158,35 @@ button {
   font-family: var(--input-font-family);
   &:focus-visible {
     border: 1px solid #ced4da;
+  }
+}
+main {
+  padding: 3rem 0;
+}
+.wrapper-main {
+  margin: 2rem 0;
+  .inner-main {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    .item {
+      background-color: #ddd;
+      padding: 1rem;
+      border-radius: 0.5rem;
+      .text {
+        .ask {
+          background-color: #fafafa;
+          padding: 1rem 0.5rem;
+          border-radius: 0.5rem;
+          margin: 0 0 20px 0;
+        }
+        .answer {
+          background-color: #faf6f6;
+          padding: 1rem 0.5rem;
+          border-radius: 0.5rem;
+          margin: 0 0 0px 0;
+          font-weight: 400;
+        }
+      }
+    }
   }
 }
