--- a/project/pug/head/head.pug
+++ b/project/pug/head/head.pug
@@ -2,3 +2,8 @@ meta(charset="UTF-8")
 meta(http-equiv="X-UA-Compatible" content="IE=edge")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 title Pigeons
+// =============== Bootstrap V5.2.2 ===============
+// =============== https://getbootstrap.com/ ===============
+link(rel="stylesheet" href="css/libs/bootstrap/bootstrap.rtl.min.css")
+script(src="js/libs/bootstrap/bootstrap.min.js")
+link(rel="stylesheet" href="css/style.css")
